<resources>
    <string name="app_name">Rajanmeet_c0868153_MT</string>
    <string name="car_rent_service">Car Rent Service</string>
    <string name="daily_rent">Daily Rent</string>
    <string name="how_many_days_you_want_to_rent">How many days you want to rent?</string>
    <string name="driver_age">Driver\'s Age:</string>
    <string name="above_60">above 60</string>
    <string name="between_21_and_60">Between 21 and 60</string>
    <string name="less_than_20_years">Less than 20 years</string>
    <string name="options">Options:</string>
    <string name="gps">GPS</string>
    <string name="child_seat">Child Seat</string>
    <string name="unlimited_milage">Unlimited Milage</string>
    <string name="amt">Amount</string>
    <string name="view_details">View Details</string>
    <string name="days">Days:</string>
    <string name="rented_days">Rented Days</string>
    <string name="age_group">Age Group:</string>
    <string name="car_model">Car Model</string>
    <string name="cost_of_rent">Cost of Rent</string>
</resources>